--- a/views/admin/includes/header.ejs
+++ b/views/admin/includes/header.ejs
@@ -6,8 +6,8 @@
             </button>
             <h1 class="navbar-brand d-none-navbar-horizontal pe-0 pe-md-3">
                 <a href="/">
-                    <img src="/static/assets/images/logo.gif" width="32" height="32" alt="BSFR" class="navbar-brand-image me-2">
-                    Beat Saber FR
+                    <img src="/static/assets/images/logo.gif" width="32" height="32" alt="BSFR" class="navbar-brand-image me-2"><!--
+                    -->Beat Saber FR
                 </a>
             </h1>
             <div class="navbar-nav flex-row order-md-last">
@@ -20,7 +20,8 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                         <a href="/agent/" class="dropdown-item">Agent</a>
-                        <a href="/admin/" class="dropdown-item">Administration</a>
+                        <a href="/admin/" class="dropdown-item active">Administration</a>
+                        <!-- <a href="/settings" class="dropdown-item<%= page === 'settings' ? ' active' : '' %>">Paramètres</a> -->
                         <div class="dropdown-divider"></div>
                         <a href="/discord/logout" class="dropdown-item">Déconnexion</a>
                     </div>
