--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -13,15 +13,15 @@
     <link rel="stylesheet" href="/static/assets/css/rankedle.css">
     <title>Beat Saber FR - Rankedle</title>
     <style>
-        #ranking .list-group-item:nth-child(1) .rank {
+        #ranking tbody tr:nth-child(1) td:first-child .avatar.rank {
             background: #ffc71e;
             color: white;
         }
-        #ranking .list-group-item:nth-child(2) .rank {
+        #ranking tbody tr:nth-child(2) td:first-child .avatar.rank {
             background: #959595;
             color: white;
         }
-        #ranking .list-group-item:nth-child(3) .rank {
+        #ranking tbody tr:nth-child(3) td:first-child .avatar.rank {
             background: #b5532d;
             color: white;
         }
@@ -240,25 +240,32 @@
                                                 <div class="card-header">
                                                     <h3 class="card-title">Classement</h3>
                                                 </div>
-                                                <div class="list-group list-group-flush overflow-auto" id="ranking">
-                                                    <% for(const rank of ranking) { %>
-                                                    <div class="list-group-item">
-                                                        <div class="row align-items-center">
-                                                            <div class="col-auto">
-                                                                <span class="avatar rank"><%= rank.rank %></span>
-                                                            </div>
-                                                            <a href="#" data-member-id="<%= rank.memberId %>" class="col-auto player-stats">
-                                                                <span class="avatar" style="background-image: url(<%= rank.avatar %>)"></span>
-                                                            </a>
-                                                            <a href="#" data-member-id="<%= rank.memberId %>" class="col text-truncate player-stats">
-                                                                <span class="text-reset d-block"><%= rank.name %></span>
-                                                            </a>
-                                                            <div class="col-auto">
-                                                                <%= rank.count %>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <% } %>
+                                                <div class="table-responsive" id="ranking">
+                                                    <table class="table table-vcenter card-table">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>#</th>
+                                                                <th>Joueur</th>
+                                                                <th>Score</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <% for(const rank of ranking) { %>
+                                                            <tr>
+                                                                <td class="w-1">
+                                                                    <span class="avatar rank"><%= rank.rank %></span>
+                                                                </td>
+                                                                <td>
+                                                                    <a href="#" class="d-flex py-1 align-items-center text-reset player-stats" data-member-id="<%= rank.memberId %>">
+                                                                        <span class="avatar me-2" style="background-image: url(<%= rank.avatar %>)"></span>
+                                                                        <div class="flex-fill"><%= rank.name %></div>
+                                                                    </span>
+                                                                </td>
+                                                                <td><%= rank.score %></td>
+                                                            </tr>
+                                                            <% } %>
+                                                        </tbody>
+                                                    </table>
                                                 </div>
                                             </div>
                                         </div>
