--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -246,7 +246,7 @@
                                                             <tr>
                                                                 <th>#</th>
                                                                 <th>Joueur</th>
-                                                                <th>Score</th>
+                                                                <th>Points</th>
                                                             </tr>
                                                         </thead>
                                                         <tbody>
