--- a/views/admin/includes/header.ejs
+++ b/views/admin/includes/header.ejs
@@ -74,6 +74,14 @@
                                 <span class="nav-link-title">Chaînes Twitch</span>
                             </a>
                         </li>
+                        <li class="nav-item<%= page === 'rankedleLogs' ? ' active' : '' %>">
+                            <a class="nav-link" href="/admin/rankedleLogs">
+                                <span class="nav-link-icon d-md-none d-lg-inline-block">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="feather feather-music"><path d="M9 18V5l12-2v13"></path><circle cx="6" cy="18" r="3"></circle><circle cx="18" cy="16" r="3"></circle></svg>
+                                </span>
+                                <span class="nav-link-title">Logs Rankedle</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
