Mise à jour de l'interfaces des paramètres utilisateur
Ajout de la possibilité (pour les membres qui boostent le serveur) de modifier l'image de carte Cube-Stalker

--- a/views/agent/includes/header.ejs
+++ b/views/agent/includes/header.ejs
@@ -21,7 +21,7 @@
                     <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                         <a href="/agent/" class="dropdown-item active">Agent</a>
                         <a href="/admin/" class="dropdown-item">Administration</a>
-                        <!-- <a href="/settings" class="dropdown-item<%= page === 'settings' ? ' active' : '' %>">Paramètres</a> -->
+                        <a href="/settings" class="dropdown-item<%= page === 'settings' ? ' active' : '' %>">Paramètres</a>
                         <div class="dropdown-divider"></div>
                         <a href="/discord/logout" class="dropdown-item">Déconnexion</a>
                     </div>
