--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -24,7 +24,7 @@
                         <a href="/agent/" class="dropdown-item">Agent</a>
                         <a href="/admin/" class="dropdown-item">Administration</a>
                         <% } %>
-                        <!-- <a href="/settings" class="dropdown-item<%= page === 'settings' ? ' active' : '' %>">Paramètres</a> -->
+                        <a href="/settings" class="dropdown-item<%= page === 'settings' ? ' active' : '' %>">Paramètres</a>
                         <div class="dropdown-divider"></div>
                         <a href="/discord/logout" class="dropdown-item">Déconnexion</a>
                     </div>
