--- a/views/admin/cardRequest.ejs
+++ b/views/admin/cardRequest.ejs
@@ -66,7 +66,7 @@
                                             </div>
                                             <div class="col-12">
                                                 <label class="form-label">Aperçu</label>
-                                                <img src="data:image/png;base64,<%= card.image %>" width="800" alt="">
+                                                <img src="data:image/webp;base64,<%= card.image %>" width="800" alt="">
                                             </div>
                                         </div>
                                     </div>
