--- a/views/admin/cardRequest.ejs
+++ b/views/admin/cardRequest.ejs
@@ -45,7 +45,7 @@
                                         <div class="alert alert-info" id="card-alert" role="alert">
                                             <h4 class="alert-title">Information</h4>
                                             <div class="text-secondary">
-                                                Cette demande d'approbation a été approuvée.
+                                                Cette demande d'approbation a été acceptée.
                                             </div>
                                         </div>
                                         <% } else if(card.status === 2) { %>
