--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -84,12 +84,24 @@
                                                         </div>
                                                         <% if(rankedle) { %>
                                                             <% if(!result) { %>
-                                                            <div id="step-1" class="step p-2 mb-2 d-flex align-items-center step-active"></div>
-                                                            <div id="step-2" class="step p-2 mb-2 d-flex align-items-center"></div>
-                                                            <div id="step-3" class="step p-2 mb-2 d-flex align-items-center"></div>
-                                                            <div id="step-4" class="step p-2 mb-2 d-flex align-items-center"></div>
-                                                            <div id="step-5" class="step p-2 mb-2 d-flex align-items-center"></div>
-                                                            <div id="step-6" class="step p-2 mb-2 d-flex align-items-center"></div>
+                                                            <div id="step-1" class="alert mb-2 step step-active" role="alert">
+                                                                <div class="d-flex"><div class="step-icon"></div><div class="step-text"></div></div>
+                                                            </div>
+                                                            <div id="step-2" class="alert mb-2 step" role="alert">
+                                                                <div class="d-flex"><div class="step-icon"></div><div class="step-text"></div></div>
+                                                            </div>
+                                                            <div id="step-3" class="alert mb-2 step" role="alert">
+                                                                <div class="d-flex"><div class="step-icon"></div><div class="step-text"></div></div>
+                                                            </div>
+                                                            <div id="step-4" class="alert mb-2 step" role="alert">
+                                                                <div class="d-flex"><div class="step-icon"></div><div class="step-text"></div></div>
+                                                            </div>
+                                                            <div id="step-5" class="alert mb-2 step" role="alert">
+                                                                <div class="d-flex"><div class="step-icon"></div><div class="step-text"></div></div>
+                                                            </div>
+                                                            <div id="step-6" class="alert mb-2 step" role="alert">
+                                                                <div class="d-flex"><div class="step-icon"></div><div class="step-text"></div></div>
+                                                            </div>
                                                             
                                                             <div class="my-5 text-center">
                                                                 <p>Montez le son et cliquez pour démarrer la musique !</p>
