--- a/views/settings/card.ejs
+++ b/views/settings/card.ejs
@@ -191,7 +191,7 @@
                     $img.src = `/settings/card/preview?t=${Date.now()}`
                     showAlert(true, 'Votre image de carte a été supprimée', 5000)
                 } else {
-                    showAlert(false, removeRequest.statusText, 5000)
+                    showAlert(false, removeRequest.headers.get('X-Status-Message') ?? '', 5000)
                 }
             })
         }
@@ -206,7 +206,7 @@
             if(saveRequest.ok) {
                 window.location.reload()
             } else {
-                showAlert(false, saveRequest.statusText, 5000)
+                showAlert(false, saveRequest.headers.get('X-Status-Message') ?? '', 5000)
             }
 
             $btnSave.classList.remove('btn-loading')
