--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -153,16 +153,16 @@
                                                             </div>
 
                                                             <div class="mb-3">
-                                                                <select type="text" class="form-select" id="song"<%= isCheating ? ' disabled': '' %>></select>
+                                                                <select type="text" class="form-select" id="song"></select>
                                                             </div>
 
                                                             <div class="row">
                                                                 <div class="col">
-                                                                    <button type="button" class="btn" id="skip"<%= isCheating ? ' disabled': '' %>>PASSER (+<span id="skip-seconds">1</span>s)</button>
+                                                                    <button type="button" class="btn" id="skip">PASSER (+<span id="skip-seconds">1</span>s)</button>
                                                                 </div>
                                                                 <div class="col-auto ms-auto">
-                                                                    <button type="button" class="btn btn-success" id="submit"<%= isCheating ? ' disabled': '' %>>ENVOYER</button>
-                                                                    <button type="button" class="btn btn-success d-none" id="end"<%= isCheating ? ' disabled': '' %>>TERMINER</button>
+                                                                    <button type="button" class="btn btn-success" id="submit">ENVOYER</button>
+                                                                    <button type="button" class="btn btn-success d-none" id="end">TERMINER</button>
                                                                 </div>
                                                             </div>
                                                             <% } else { %>
