--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -40,7 +40,7 @@
                     <div class="row g-2 align-items-center">
                         <div class="col">
                             <h2 class="page-title text-white">
-                                Rankedle<%= rankedle ? ` #${rankedle.id}` : '' %>
+                                <%= rankedle ? `Saison ${rankedle.seasonId} – Rankedle #${rankedle.id}` : 'Rankedle' %>
                             </h2>
                         </div>
                     </div>
@@ -153,17 +153,16 @@
                                                             </div>
 
                                                             <div class="mb-3">
-                                                                <select type="text" class="form-select" id="song"></select>
+                                                                <div class="input-group">
+                                                                    <select type="text" class="form-select" id="song"></select>
+                                                                    <button type="button" class="btn btn-purple" id="hint">INDICE</button>
+                                                                </div>
                                                             </div>
 
-                                                            <div class="row">
-                                                                <div class="col">
-                                                                    <button type="button" class="btn" id="skip">PASSER (+<span id="skip-seconds">1</span>s)</button>
-                                                                </div>
-                                                                <div class="col-auto ms-auto">
-                                                                    <button type="button" class="btn btn-success" id="submit">ENVOYER</button>
-                                                                    <button type="button" class="btn btn-success d-none" id="end">TERMINER</button>
-                                                                </div>
+                                                            <div class="btn-list">
+                                                                <button type="button" class="btn me-auto" id="skip">PASSER (+<span id="skip-seconds">1</span>s)</button>
+                                                                <button type="button" class="btn btn-success" id="submit">ENVOYER</button>
+                                                                <button type="button" class="btn btn-success d-none" id="end">TERMINER</button>
                                                             </div>
                                                             <% } else { %>
                                                             <a class="card mb-3" href="https://beatsaver.com/maps/<%= result.map.id %>" target="_blank">
@@ -278,7 +277,7 @@
                                                                         <div class="flex-fill"><%= rank.name %></div>
                                                                     </span>
                                                                 </td>
-                                                                <td><%= rank.score %></td>
+                                                                <td><%= rank.points %></td>
                                                             </tr>
                                                             <% } %>
                                                         </tbody>
@@ -341,7 +340,7 @@
                                                         <li>Vous gagnez des points si vous parvenez à trouver le bon titre :</li>
                                                     </ul>
 
-                                                    <div class="table-responsive">
+                                                    <div class="table-responsive mb-2">
                                                         <table class="table text-center w-100">
                                                             <thead>
                                                                 <tr>
@@ -365,6 +364,8 @@
                                                             </tbody>
                                                         </table>
                                                     </div>
+
+                                                    <div class="text-red"><i>Attention: L'obtention d'un indice divisera le nombre de points obtenus par deux !</i></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -500,6 +501,48 @@
                                                             </div>
                                                         </div>
                                                     </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="modal modal-xl" id="modalHintConfirm" tabindex="-1">
+                                        <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+                                            <div class="modal-content">
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                <div class="modal-status bg-info"></div>
+                                                <div class="modal-body text-center py-4">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon mb-2 text-info icon-lg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M12 9v4" /><path d="M12 16v.01" /></svg>
+                                                    <h3>Obenir un indice ?</h3>
+                                                    <div class="text-secondary">Les points obtenus à l'issue de la partie seront divisés par deux.</div>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <div class="w-100">
+                                                        <div class="row">
+                                                            <div class="col">
+                                                                <a href="#" class="btn w-100" data-bs-dismiss="modal">Annuler</a>
+                                                            </div>
+                                                            <div class="col">
+                                                                <a href="#" class="btn btn-primary w-100" id="redeemHint">Confirmer</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="modal modal-xl" id="modalHint" tabindex="-1">
+                                        <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+                                            <div class="modal-content">
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                <div class="modal-status bg-info"></div>
+                                                <div class="modal-body text-center py-4">
+                                                    <h3>Votre indice</h3>
+                                                    <div id="hintContent"></div>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <a href="#" class="btn w-100" data-bs-dismiss="modal">Fermer</a>
                                                 </div>
                                             </div>
                                         </div>
