--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -182,7 +182,7 @@
 
                                                             <div class="text-center">
                                                                 <% if(result.message.image) { %>
-                                                                <img width="500px" src="<%= result.message.image %>">
+                                                                <img style="max-width:300px" src="<%= result.message.image %>">
                                                                 <% } %>
 
                                                                 <h2> <%= result.message.content %></h2>
