Correction de la popup de demande d'indice

--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -513,8 +513,11 @@
                                                 <div class="modal-status bg-info"></div>
                                                 <div class="modal-body text-center py-4">
                                                     <svg xmlns="http://www.w3.org/2000/svg" class="icon mb-2 text-info icon-lg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M12 9v4" /><path d="M12 16v.01" /></svg>
-                                                    <h3>Obenir un indice ?</h3>
-                                                    <div class="text-secondary">Les points obtenus à l'issue de la partie seront divisés par deux.</div>
+                                                    <h3>Obtenir un indice ?</h3>
+                                                    <div class="text-secondary">
+                                                        Cela affichera la cover de la map floutée.<br>
+                                                        Les points obtenus à l'issue de la partie<br> seront divisés par deux.
+                                                    </div>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <div class="w-100">
