Ajout du Meta Quest 3

--- a/views/forms/run/youtube.ejs
+++ b/views/forms/run/youtube.ejs
@@ -134,7 +134,8 @@
                                             </optgroup>
                                             <optgroup label="Oculus/Meta">
                                                 <option value="Oculus Quest">Oculus Quest</option>
-                                                <option value="Oculus Quest 2">Meta Quest 2</option>
+                                                <option value="Meta Quest 2">Meta Quest 2</option>
+                                                <option value="Meta Quest 2">Meta Quest 3</option>
                                                 <option value="Oculus Rift">Oculus Rift</option>
                                                 <option value="Oculus Rift S">Oculus Rift S</option>
                                             </optgroup>
@@ -248,7 +249,8 @@
                                             <option value="">Veuillez sélectionner un casque VR</option>
                                             <optgroup label="Oculus/Meta">
                                                 <option value="Oculus Quest">Oculus Quest</option>
-                                                <option value="Oculus Quest 2">Meta Quest 2</option>
+                                                <option value="Meta Quest 2">Meta Quest 2</option>
+                                                <option value="Meta Quest 2">Meta Quest 3</option>
                                             </optgroup>
                                             <option value="Autre">Autre (indiquez-le en commentaire)</option>
                                         </select>
