--- a/views/agent/includes/header.ejs
+++ b/views/agent/includes/header.ejs
@@ -34,6 +34,14 @@
             <div class="navbar navbar-light">
                 <div class="container-xl">
                     <ul class="navbar-nav">
+                        <li class="nav-item<%= page === 'agent_settings' ? ' active' : '' %>">
+                            <a class="nav-link" href="/agent/settings">
+                                <span class="nav-link-icon d-md-none d-lg-inline-block">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M19.875 6.27a2.225 2.225 0 0 1 1.125 1.948v7.284c0 .809 -.443 1.555 -1.158 1.948l-6.75 4.27a2.269 2.269 0 0 1 -2.184 0l-6.75 -4.27a2.225 2.225 0 0 1 -1.158 -1.948v-7.285c0 -.809 .443 -1.554 1.158 -1.947l6.75 -3.98a2.33 2.33 0 0 1 2.25 0l6.75 3.98h-.033z" /><path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" /></svg>
+                                </span>
+                                <span class="nav-link-title">Paramètres</span>
+                            </a>
+                        </li>
                         <li class="nav-item<%= page === 'message_send' ? ' active' : '' %>">
                             <a class="nav-link" href="/agent/message/send">
                                 <span class="nav-link-icon d-md-none d-lg-inline-block">
