Mise à jour de l'image

--- a/views/includes/meta.ejs
+++ b/views/includes/meta.ejs
@@ -6,5 +6,5 @@
 <meta name="description" content="Bienvenue sur le site de la communauté francophone de Beat Saber !">
 <meta name="og:description" content="Bienvenue sur le site de la communauté francophone de Beat Saber !">
 <meta name="twitter:description" content="Bienvenue sur le site de la communauté francophone de Beat Saber !">
-<meta name="og:image" content="https://bsaber.fr/static/assets/images/favicon.ico">
-<meta name="twitter:image" content="https://bsaber.fr/static/assets/images/favicon.ico">
+<meta name="og:image" content="https://bsaber.fr/static/assets/images/logo.png">
+<meta name="twitter:image" content="https://bsaber.fr/static/assets/images/logo.png">
