Création d'une page de résumé pour la saison précédente de Rankedle

--- a/views/rankedle/rankedle.ejs
+++ b/views/rankedle/rankedle.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <%- include('./includes/meta.ejs') %>
+    <%- include('../includes/meta.ejs') %>
     <link rel="shortcut icon" href="/static/assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/static/assets/libs/tabler/style.min.css">
     <link rel="stylesheet" href="/static/assets/libs/tabler/vendors.min.css">
@@ -29,7 +29,7 @@
     <div class="background"><div class="blur"></div></div>
 
     <div class="page">
-        <%- include('./includes/header.ejs') %>
+        <%- include('../includes/header.ejs') %>
         
         <div class="page-wrapper">
             <div class="container-xl">
